[metadata]
name = pyreadpartitions
description = Read MBR and GPT partitions directly in python.
version = attr: pyreadpartitions.__version__
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = Cyrille Pontvieux
author_email = cyrille@enialis.net
url = https://gitlab.com/jrd/pyreadpartitions
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Filesystems
    Topic :: Utilities
keywords = disk partition mbr gpt

[options]
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pyreadpartitions = pyreadpartitions:main

[wheel]
universal = 1

[flake8]
max-line-length = 512
ignore =
    # allow breaking line before a binary operator and improve readability
    W503,
    # allow line break after binary operator
    W504
